# assay

./: .gitignore  Dockerfile  README.md  assay-design.md  assay-ui-sprint-plan-prompt.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  eval.yml
assay/: __init__.py  cli.py  config.py
assay/adapters/: __init__.py  anthropic.py  base.py  mock.py  ollama.py  openai_compat.py  registry.py  rest.py
assay/checks/: __init__.py  base.py  library.py  registry.py
assay/engine/: __init__.py  connection.py  gating.py  review.py  runner.py
assay/generator/: __init__.py  build.py
assay/judges/: __init__.py  judge.py
assay/notifications/: __init__.py  base.py  factory.py  linear.py
assay/pipeline/: __init__.py  hash.py  service.py
assay/reporting/: __init__.py  exporters.py
assay/sandbox/: __init__.py  runner.py
assay/server/: app.py
assay/server/static/: components.css  style.css  tokens.css
assay/server/templates/: _adapter_fields.html  _case_row.html  _macros.html  _nav.html  _summary_bar.html  _transcript.html  (+12 more)
assay/spec/: __init__.py  loader.py  models.py
assay/store/: __init__.py  db.py  models.py
examples/compliance-copilot/: README.md  assay.yaml  requirements.md  run_via_db.py  target.postman_collection.json
tests/: test_activation.py  test_adjudication.py  test_auth_posture.py  test_corrections.py  test_db_run.py  test_e2e.py  test_feedback1.py  test_notifications.py  test_phase0.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_pipeline_model.py  test_smoke.py  test_target_binding.py  test_ui.py
(+1 files in other folders)
