[project]
name = "assay-eval"
version = "0.2.0"
description = "An open-source eval-pipeline builder for models behind an endpoint, MCP, or SDK."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "jsonschema>=4.21",
    "jsonpath-ng>=1.6",
    "requests>=2.31",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
server = ["fastapi>=0.110", "uvicorn>=0.29", "jinja2>=3.1", "python-multipart>=0.0.9", "itsdangerous>=2.1"]
anthropic = ["anthropic>=0.39"]
openai = ["openai>=1.30"]
dev = ["pytest>=8.0,<9", "httpx>=0.27"]

[project.scripts]
assay = "assay.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["assay*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
